--- a/style.css
+++ b/style.css
@@ -76,3 +76,10 @@ p{
     background-color: #FEEAE9;
     border-radius: 10px;
 }
+@media only screen and (max-width: 375px){
+    .carousel-inner img{
+    height: 100%;
+    width: auto;
+}
+    
+}
